Wip adding tools.

--- a/package.json
+++ b/package.json
@@ -6,21 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/parser": "^7.24.7",
+    "@prettier/plugin-php": "^0.22.2",
+    "next": "14.2.4",
+    "prettier": "^3.3.2",
+    "prettier-plugin-sql": "^0.18.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
