--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -3,6 +3,7 @@ name: Master
 on:
   push:
     branches: [ "master" ]
+
   workflow_dispatch:
 
 permissions:
@@ -20,28 +21,32 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Detect package manager
         id: detect-package-manager
         run: |
-
-          echo "manager=npm" >> $GITHUB_OUTPUT
-          echo "command=ci" >> $GITHUB_OUTPUT
-          echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-          exit 0
-    
-
+          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+            echo "manager=yarn" >> $GITHUB_OUTPUT
+            echo "command=install" >> $GITHUB_OUTPUT
+            echo "runner=yarn" >> $GITHUB_OUTPUT
+            exit 0
+          elif [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "Unable to determine packager manager"
+            exit 1
+          fi
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "22"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
           static_site_generator: next
-
       - name: Restore cache
         uses: actions/cache@v3
         with:
@@ -50,16 +55,10 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} run build
-
-      - name: List directory contents for debugging
-        run: ls -R
-
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
